fix viewport height on mobile devices

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -4,6 +4,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	height: 100vh;
+	height: calc(var(--vh, 1vh) * 100); // refer to index.js
 	width: 100vw;
 
 	padding: $padding;
@@ -47,8 +48,10 @@ body {
 		.navigation__container {
 			position: fixed;
 			width: 100vh;
+			width: calc(var(--vh, 1vh) * 100); // refer to index.js
 			max-width: 700px;
 			height: 5vh;
+			height: calc(var(--vh, 1vh) * 5); // refer to index.js
 			top: 50%;
 
 			padding: 0 76px $padding 56px;
